# Calyx

./: .env.example  .gitattributes  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  env.sh
crates/calyx-sextant/: Cargo.toml  build.rs
crates/calyx-sextant/benches/: bench_diskann_1e6.rs
crates/calyx-sextant/src/: error.rs  lib.rs  search.rs
crates/calyx-sextant/src/index/: autotune.rs  cuvs_bruteforce.rs  funnel.rs  mod.rs  partitioned.rs  testutil.rs  vecfile.rs
crates/calyx-sextant/tests/: autotune.rs  diskann_concat.rs  diskann_dual.rs  diskann_graph.rs  diskann_search.rs  diskann_token.rs  embedded_scale_perf_fsv.rs  funnel.rs  gpu_parity_fsv.rs  guarded_inert.rs  guarded_multislot_readback.rs  guarded_search.rs  hnsw_recall.rs  issue723_multimodal_rrf_fsv.rs  ph58_ann_gc_fsv.rs  ph63_navigation_consensus_traverse.rs  ph63_navigation_fsv.rs  ph63_navigation_skills.rs  ph68_parallel_build_fsv.rs  pipeline_recall_headroom_fsv.rs  planner_explain_path_fsv.rs  query_admission_fsv.rs  query_filters_fsv.rs  query_validation.rs  recurrence_boost.rs  recurrence_boost_fsv.rs  reranker_nonpersistence_fsv.rs  reranker_search_fsv.rs  reranker_tei_nonpersistence_fsv.rs  spann.rs  sparse_vector_readback_fsv.rs  stage4_fail_closed_tests.rs  stage4_fsv.rs  stage4_real_qrels_fsv.rs  temporal_never_dominant_fsv.rs  temporal_search.rs  temporal_search_fsv.rs  temporal_window_recall.rs  timezone_alignment_fsv.rs
crates/calyx-sextant/tests/issue640_support/: mod.rs
crates/calyx-sextant/tests/ph55_fsv/: support.rs
crates/calyx-sextant/tests/sextant_support/: mod.rs
crates/calyx-sextant/tests/spann/: support.rs
crates/calyxd/: Cargo.toml
crates/calyxd/examples/: mcp_fsv_server.rs
crates/calyxd/src/: config.rs  cuda_probe.rs  health.rs  lib.rs  main.rs  server.rs  startup.rs  vram.rs
crates/calyxd/src/learner_origin/: config.rs  metrics.rs  mod.rs  model.rs  privacy.rs  service.rs
crates/calyxd/tests/: chain_verify_metrics.rs  main_wire.rs  mcp_server.rs  metrics_surface_fsv.rs  verify_restore.rs
(+1502 files in other folders)
