[package]
name = "calyxd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "calyxd"
path = "src/main.rs"

[dependencies]
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-forge = { path = "../calyx-forge" }
calyx-mcp = { path = "../calyx-mcp" }
nvml-wrapper = { workspace = true }
calyx-ledger = { path = "../calyx-ledger" }
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
blake3.workspace = true

[features]
default = []
# Enables the real CUDA preflight probe (calyx-forge CUDA path). Build with
# --features cuda on a GPU host; without it, server mode fails loud at startup.
cuda = ["calyx-forge/cuda"]
